@@ -2,14 +2,16 @@
 Hash: SHA1
 
 DIST metric_fu-1.1.6.gem 118784 RMD160 3c614fce89e1b8f3813178d5d74ee8033180d268 SHA1 8fb0c102c559e0ebf239f8884052ec54c716acfe SHA256 889afc01e5e77f20988ea0676dc1921f5db831556156ed9fe46ae61f3bc33bb9
+DIST metric_fu-1.2.0.gem 136192 RMD160 64f9549b59497f88ce26f0a723471b170ea35c70 SHA1 5a507390dbaadfe9a67f7b0f88b30876cfcbd697 SHA256 a979f64e6dd163c8ac27f51e2984914a8150dbad0fb400b7f65e7b90fa312bf0
 EBUILD metric_fu-1.1.6-r1.ebuild 843 RMD160 3ef771e59dd4a6f80a9887faf478a6142dfe23c2 SHA1 c49d12114937ca821f9d54e07403777cff1980ad SHA256 56459ef537a81b18e2111d1d0afb97e5d2d985b2b51f8bf05ca4bf5b45f31ddc
 EBUILD metric_fu-1.1.6.ebuild 836 RMD160 86aa35a311849d9de9df8226822edd71d7d868b6 SHA1 aebc6b572a244fba069e7d7b295aa8066d73cbae SHA256 034388e456e5fc4d212742807213eb5b50ce0423299b80e8e3b98a676888f4ae
-MISC ChangeLog 489 RMD160 74a7fb9062c97a1503f75e3d52389b0767c09982 SHA1 f6be553c44b2a11d870d00c44f8913b131131037 SHA256 15aefa32268dda95f55d99ca4f8fb22071fd727c8522b187f97f70cbc687abd0
+EBUILD metric_fu-1.2.0.ebuild 843 RMD160 253fbc0a92f90a7585a7c3b997ed46773d53eadc SHA1 7377f82f698b4b414e8599c8937d844af6639495 SHA256 571972f28a45c30ddfd92293ffb4a11abee0cbcef026cc242ff2709513acc8d8
+MISC ChangeLog 613 RMD160 af639fabf699b931e3c54979064256ec2115f0ec SHA1 356aed81ee6e7be11991877ed02230721a55d510 SHA256 f2c431f55999f0bbff8462e7145c6b093b4146e6f98448dd6024ae3a31f85ecc
 MISC metadata.xml 215 RMD160 682b22c57f2f17c789b244e2bb32fe15ca3fa332 SHA1 ccf017e39c3f44ac4b557da94f91096555cb1be2 SHA256 c058515dd6264789274b580e999ce4fbbb5c53c36a452bf7b32fd227980abcf8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAks7lssACgkQeM7EJeUH71MKtwCcDE+kljtKwGzxV/9/GOfrDlV1
-nQ4AnijE50+e6uPpuodnndH3bLLcZoPA
-=Wvd1
+iEYEARECAAYFAktQIngACgkQeM7EJeUH71NZYACcCTq5uFB/ZTJbPiqc3ghbB/kV
+GsAAoIoRfNdVFvap44GQI0P6xCDAtrqc
+=YWow
 -----END PGP SIGNATURE-----
