@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/metric_fu
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*metric_fu-1.2.0 (15 Jan 2010)
+
+  15 Jan 2010; Hans de Graaff <graaff@gentoo.org> +metric_fu-1.2.0.ebuild:
+  Version bump.
 
 *metric_fu-1.1.6-r1 (30 Dec 2009)
 
